--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -20,6 +20,7 @@
     "error": "Ошибка",
     "success": "Успешно",
     "back": "Назад",
+    "backHome": "На главную",
     "next": "Далее",
     "confirm": "Подтвердить",
     "apply": "Применить",
@@ -46,7 +47,8 @@
     "yes": "Да",
     "no": "Нет",
     "or": "или",
-    "and": "и"
+    "and": "и",
+    "user": "Пользователь"
   },
   "form": {
     "fillRequired": "Заполните обязательные поля",
@@ -493,6 +495,18 @@
   "pricing": {
     "title": "Тарифы",
     "subtitle": "Выберите подходящий план",
+    "month": "мес",
+    "tokens": {
+      "title": "Или платите Linkkon токенами",
+      "balanceDescription": "100 Linkkon = 1 день Premium. Ваш баланс: {{balance}} токенов",
+      "converting": "Конвертация...",
+      "buyDay": "Купить 1 день за {{cost}} Linkkon",
+      "buyTokens": "Купить токены"
+    },
+    "companyDetails": {
+      "nameLine": "ИП BEEGIN • БИН: 971207300019",
+      "addressLine": "г. Алматы, ул. Шолохова, д. 20/7"
+    },
     "free": {
       "title": "Free",
       "description": "Для начала",
@@ -566,10 +580,13 @@
     "overview": "Обзор",
     "users": "Пользователи",
     "pages": "Страницы",
+    "tokens": "Токены",
     "analytics": "Аналитика",
     "charts": "Графики",
     "detailed": "Детальная",
     "tiers": "Тарифы",
+    "verification": "Верификация",
+    "translations": "Переводы",
     "signOut": "Выйти",
     "noData": "Нет данных",
     "totalUsers": "Всего пользователей",
@@ -740,6 +757,10 @@
   },
   "teams": {
     "title": "Команды",
+    "notFoundTitle": "Команда не найдена",
+    "notFoundDesc": "Эта команда не существует или является приватной.",
+    "membersTitle": "Участники команды",
+    "noMembers": "В команде пока нет участников",
     "settings": "Настройки команды",
     "name": "Название",
     "description": "Описание",
@@ -988,7 +1009,11 @@
     "save": "Сохранить",
     "noBlocks": "Нет блоков",
     "initiator": "Инициатор",
-    "partner": "Партнёр"
+    "partner": "Партнёр",
+    "title": "Коллаборация",
+    "notFoundTitle": "Коллаборация не найдена",
+    "notFoundDesc": "Эта страница не существует или коллаборация ещё не принята.",
+    "pageNoBlocks": "Блоки ещё не добавлены"
   },
   "dashboard": {
     "loadError": "Ошибка загрузки",
