--- a/src/i18n/locales/kk.json
+++ b/src/i18n/locales/kk.json
@@ -20,6 +20,7 @@
     "error": "Қате",
     "success": "Сәтті",
     "back": "Артқа",
+    "backHome": "Басты бетке",
     "next": "Келесі",
     "confirm": "Растау",
     "apply": "Қолдану",
@@ -46,7 +47,10 @@
     "yes": "Иә",
     "no": "Жоқ",
     "or": "немесе",
-    "and": "және"
+    "and": "және",
+    "user": "Пайдаланушы",
+    "friend": "Дос",
+    "recipient": "Алушы"
   },
   "form": {
     "fillRequired": "Міндетті өрістерді толтырыңыз",
@@ -106,7 +110,9 @@
     "previewDesc": "Галереяда көрсетілетін сурет",
     "removePreview": "Алдын ала қарауды алып тастау",
     "notifications": "Хабарламалар",
+    "emailLabel": "Email",
     "emailDesc": "Жаңа өтініштер email арқылы",
+    "telegramLabel": "Telegram",
     "telegramDesc": "Лезде хабарламалар",
     "telegramChatId": "Сіздің Chat ID",
     "telegramHelp": "ID алыңыз",
@@ -289,6 +295,10 @@
       "freeAction": "Тегін бастау",
       "viewPlans": "Pro таңдау",
       "otherPlans": "Басқа нұсқалар:",
+      "annualPriceKzt": "31 320 ₸ 12 айға",
+      "annualPriceUsd": "$60/year",
+      "otherPlansSix": "6 ай: 3 500 ₸/ай",
+      "otherPlansThree": "3 ай: 4 350 ₸/ай",
       "free": {
         "item1": "6 базалық блок",
         "item2": "1 AI генерация/ай",
@@ -421,7 +431,8 @@
     "community": "Қоғамдастық",
     "beforeAfter": "Дейін/Кейін",
     "customCode": "Код",
-    "scratch": "Скретч"
+    "scratch": "Скретч",
+    "search": "Іздеу"
   },
 "auth": {
     "signIn": "Кіру",
@@ -493,6 +504,18 @@
   "pricing": {
     "title": "Тарифтер",
     "subtitle": "Сәйкес жоспарды таңдаңыз",
+    "month": "ай",
+    "tokens": {
+      "title": "Немесе Linkkon токендерімен төлеңіз",
+      "balanceDescription": "100 Linkkon = 1 күн Premium. Балансыңыз: {{balance}} токен",
+      "converting": "Айырбастау...",
+      "buyDay": "{{cost}} Linkkon үшін 1 күн сатып алу",
+      "buyTokens": "Токен сатып алу"
+    },
+    "companyDetails": {
+      "nameLine": "ИП BEEGIN • БИН: 971207300019",
+      "addressLine": "Алматы қ., Шолохов к-сі, 20/7"
+    },
     "free": {
       "title": "Free",
       "description": "Бастау үшін",
@@ -524,7 +547,8 @@
     "popular": "Танымал",
     "viewPage": "Көру",
     "like": "Ұнату",
-    "views": "қаралымдар"
+    "views": "қаралымдар",
+    "untitled": "Атаусыз"
   },
   "errors": {
     "general": "Қате орын алды",
@@ -545,7 +569,10 @@
     "shareLink": "Бөлісу",
     "qrCode": "QR-код",
     "linkCopied": "Сілтеме көшірілді",
-    "scanQR": "Бетке өту үшін сканерлеңіз"
+    "scanQR": "Бетке өту үшін сканерлеңіз",
+    "defaultTitle": "Менің бетімді қараңыз",
+    "qrDialogTitle": "QR-код",
+    "qrDialogDescription": "Бетпен бөлісу үшін осы кодты сканерлеңіз"
   },
   "toasts": {
     "sharing": {
@@ -566,10 +593,13 @@
     "overview": "Шолу",
     "users": "Пайдаланушылар",
     "pages": "Беттер",
+    "tokens": "Токендер",
     "analytics": "Аналитика",
     "charts": "Графиктер",
     "detailed": "Толық",
     "tiers": "Тарифтер",
+    "verification": "Тексеру",
+    "translations": "Аудармалар",
     "signOut": "Шығу",
     "noData": "Деректер жоқ",
     "totalUsers": "Барлық пайдаланушылар",
@@ -620,24 +650,264 @@
       "sat": "Сб"
     }
   },
+  "adminCharts": {
+    "userGrowth": "Пайдаланушылар өсімі",
+    "totalUsers": "Барлық пайдаланушылар",
+    "newRegistrations": "Жаңа тіркелулер (14 күн)",
+    "users": "Пайдаланушылар",
+    "pages": "Беттер",
+    "blocks": "Блоктар",
+    "eventsTitle": "Оқиғалар (14 күн)",
+    "userDistribution": "Пайдаланушылар үлестірімі",
+    "eventTypes": "Оқиға түрлері",
+    "count": "Саны",
+    "socialActivity": "Әлеуметтік белсенділік",
+    "socialActivity14Days": "Әлеуметтік белсенділік (14 күн)",
+    "contentCreation14Days": "Контент жасау (14 күн)",
+    "popularBlockTypes": "Танымал блок түрлері",
+    "total": "Барлығы",
+    "accepted": "Қабылданды",
+    "events": {
+      "views": "Қаралымдар",
+      "clicks": "Басулар",
+      "shares": "Бөлісулер"
+    },
+    "social": {
+      "friendships": "Достықтар",
+      "collaborations": "Коллаборациялар",
+      "teams": "Командалар"
+    }
+  },
+  "adminTokens": {
+    "title": "Токен экономикасы",
+    "stats": {
+      "inCirculation": "Айналымда",
+      "inCirculationDesc": "Барлық пайдаланушы токендері",
+      "totalEarned": "Барлығы табылды",
+      "totalSpent": "Барлығы жұмсалды",
+      "platformFee": "Платформа комиссиясы",
+      "platformFeeDesc": "Сатылымнан 4%",
+      "premiumPurchases": "Premium сатып алулар",
+      "templatePurchases": "Шаблон сатып алулар",
+      "productPurchases": "Тауар сатып алулар",
+      "activeUsers": "Белсенді пайдаланушылар",
+      "pendingWithdrawals": "Күтудегі шығарулар",
+      "paidOut": "Төленді"
+    },
+    "tabs": {
+      "overview": "Шолу",
+      "transactions": "Транзакциялар",
+      "withdrawals": "Шығарулар"
+    },
+    "distributionTitle": "Транзакция түрлері бойынша бөлініс",
+    "historyTitle": "Транзакциялар тарихы",
+    "withdrawalsTitle": "Қаражат шығару өтінімдері",
+    "noData": "Деректер жоқ",
+    "noTransactions": "Транзакциялар жоқ",
+    "noWithdrawals": "Шығару өтінімдері жоқ",
+    "platformFeeLabel": "Комиссия",
+    "notProvided": "Көрсетілмеген",
+    "filter": {
+      "allTypes": "Барлық түрлер",
+      "premium": "Premium",
+      "templates": "Шаблондар",
+      "products": "Тауарлар",
+      "paidBlocks": "Ақылы блоктар"
+    },
+    "status": {
+      "pending": "Күтуде",
+      "approved": "Мақұлданды",
+      "completed": "Орындалды",
+      "rejected": "Қабылданбады"
+    },
+    "actions": {
+      "approve": "Мақұлдау",
+      "reject": "Қабылдамау",
+      "markPaid": "Төленді деп белгілеу"
+    }
+  },
+  "achievements": {
+    "rewardDescription": "Жетістік үшін сыйақы: {{title}}"
+  },
   "templates": {
     "title": "Шаблондар",
     "save": "Шаблон ретінде сақтау",
     "apply": "Шаблон қолдану",
     "myTemplates": "Менің шаблондарым",
-    "marketplace": "Маркетплейс"
+    "marketplace": "Маркетплейс",
+    "category": "Санат",
+    "selectCategory": "Санатты таңдаңыз",
+    "categories": {
+      "all": "Барлығы",
+      "creators": "Креаторлар",
+      "business": "Бизнес",
+      "service": "Қызмет",
+      "realEstate": "Жылжымайтын мүлік",
+      "wedding": "Үйлену",
+      "personal": "Жеке",
+      "experts": "Сарапшылар",
+      "premium": "Премиум",
+      "other": "Басқа"
+    }
+  },
+  "blockPreview": {
+    "title": "Блок алдын ала қарау",
+    "unavailable": "Превью қолжетімсіз",
+    "linkTitle": "Менің сілтемем",
+    "buttonTitle": "Басыңыз",
+    "textContent": "Бұл мәтіндік блок",
+    "imageAlt": "Үлгі сурет",
+    "socialsTitle": "Менің әлеуметтік желілерім",
+    "productName": "Өнім",
+    "productDescription": "Өнім сипаттамасы",
+    "videoTitle": "Бейне",
+    "carouselImage1": "Сурет 1",
+    "carouselImage2": "Сурет 2",
+    "customCodeHtml": "<div style=\"padding: 20px; text-align: center;\">Кастом HTML</div>",
+    "formTitle": "Байланыс формасы",
+    "formButton": "Жіберу",
+    "newsletterTitle": "Жаңалықтарға жазылыңыз",
+    "newsletterDescription": "Жаңалықтарды бірінші болып алыңыз",
+    "newsletterButton": "Жазылу",
+    "testimonialName": "Иван Иванов",
+    "testimonialText": "Керемет сервис!",
+    "messengerTitle": "Маған жазыңыз",
+    "downloadTitle": "Файлды жүктеу",
+    "downloadDescription": "Файл сипаттамасы",
+    "scratchTitle": "Сүртіп, ұтып алыңыз",
+    "scratchReveal": "20% жеңілдік!"
+  },
+  "animationSettings": {
+    "title": "Пайда болу анимациясы",
+    "type": "Анимация түрі",
+    "none": "Анимация жоқ",
+    "fadeIn": "Баяу пайда болу",
+    "slideUp": "Төменнен жоғары",
+    "scaleIn": "Үлкейту",
+    "bounce": "Секіру",
+    "speed": "Анимация жылдамдығы",
+    "speedSlow": "Баяу (0.8s)",
+    "speedNormal": "Қалыпты (0.5s)",
+    "speedFast": "Тез (0.3s)",
+    "delay": "Кідіріс: {{value}}мс",
+    "delayHint": "Анимация басталғанға дейінгі уақыт (0-2000мс)"
   },
   "tokens": {
     "balance": "Токен балансы",
     "earn": "Табу",
     "spend": "Жұмсау",
-    "history": "Тарих"
+    "history": "Тарих",
+    "dailyVisit": "күнделікті кіру",
+    "addBlock": "блок қосу",
+    "useAi": "AI қолдану",
+    "toastEarned": "+{{count}} Linkkon {{action}} үшін!",
+    "insufficientForPremium": "Linkkon жеткіліксіз. {{count}} токен қажет.",
+    "premiumGranted": "🎉 1 күн Premium алдыңыз!",
+    "insufficientTokens": "Токендер жеткіліксіз",
+    "convertError": "Айырбастау қатесі",
+    "insufficientForPurchase": "Linkkon жеткіліксіз. {{count}} токен қажет.",
+    "purchaseSuccess": "✨ Сәтті сатып алынды!",
+    "purchaseError": "Сатып алу қатесі",
+    "withdrawalCreated": "Шығаруға өтінім жасалды!",
+    "withdrawalPremiumRequired": "Шығару тек Premium қолданушыларға қолжетімді",
+    "withdrawalError": "Өтінімді жасау қатесі"
+  },
+  "quests": {
+    "dailyVisit": {
+      "title": "Күнделікті кіру",
+      "description": "Қосымшаға кіріңіз"
+    },
+    "addBlock": {
+      "title": "Блок қосу",
+      "description": "Бетке жаңа блок қосыңыз"
+    },
+    "editProfile": {
+      "title": "Профильді жаңарту",
+      "description": "Атыңызды немесе биоңызды өзгертіңіз"
+    },
+    "sharePage": {
+      "title": "Бетпен бөлісу",
+      "description": "Бетіңізге сілтемені көшіріңіз"
+    },
+    "useAi": {
+      "title": "AI қолдану",
+      "description": "AI арқылы контент жасаңыз"
+    },
+    "toastDailyVisit": "👋 +{{count}} Linkkon күнделікті кіру үшін!",
+    "toastCompleted": "{{icon}} +{{count}} Linkkon \"{{title}}\" үшін!",
+    "panelTitle": "Күнделікті тапсырмалар",
+    "allCompleted": "🎉 Барлық тапсырмалар орындалды!",
+    "tokensEarned": "+{{count}} Linkkon табылды"
   },
   "referral": {
     "title": "Реферал бағдарламасы",
     "yourCode": "Сіздің код",
     "invited": "Шақырылды",
-    "earned": "Табылды"
+    "earned": "Табылды",
+    "toastSuccess": "🎉 Сіз бен досыңызға +{{count}} күн Premium!",
+    "codeCopied": "Код көшірілді!",
+    "linkCopied": "Сілтеме көшірілді!",
+    "errors": {
+      "invalidCode": "Жарамсыз шақыру коды",
+      "alreadyReferred": "Сіз реферал кодты қолдандыңыз",
+      "selfReferral": "Өз кодыңызды қолдануға болмайды",
+      "applyFailed": "Кодты қолдану қатесі"
+    }
+  },
+  "social": {
+    "weeklyChallenge": "Апталық челлендж",
+    "challenge": "Челлендж",
+    "activity": {
+      "pagePublished": "бетті жариялады",
+      "newBlock": "жаңа блок қосты",
+      "achievement": "жетістік алды",
+      "streakMilestone": "стрик кезеңіне жетті",
+      "challengeCompleted": "челленджді аяқтады",
+      "giftSent": "сыйлық жіберді",
+      "giftReceived": "сыйлық алды",
+      "pageBoosted": "бетті ілгерілетті",
+      "newFriend": "дос қосты",
+      "pageLiked": "бетке лайк басты"
+    },
+    "feed": {
+      "emptyTitle": "Әзірге белсенділік жоқ",
+      "emptyDescription": "Белсенділікті көру үшін достар қосыңыз",
+      "title": "Достар лентасы",
+      "events_one": "{{count}} оқиға",
+      "events_other": "{{count}} оқиға"
+    },
+    "metadata": {
+      "achievement": "🏆 {{title}}",
+      "achievementFallback": "Жаңа жетістік",
+      "streak": "🔥 {{count}} күн қатарынан",
+      "challenge": "✅ {{title}}",
+      "challengeFallback": "Челлендж орындалды",
+      "gift": "💝 +{{count}} Premium күні",
+      "boost": "🚀 {{type}} буст",
+      "boostFallback": "standard"
+    },
+    "pendingGifts": {
+      "title": "Сізге сыйлықтар!",
+      "count_one": "{{count}} сыйлық",
+      "count_other": "{{count}} сыйлық",
+      "days_one": "+{{count}} күн",
+      "days_other": "+{{count}} күн",
+      "activate": "Қосу"
+    },
+    "weeklyChallenges": {
+      "title": "Апталық челлендждер",
+      "completed": "{{completed}}/{{total}} орындалды",
+      "refreshesOnMonday": "Әр дүйсенбі жаңартылады",
+      "daysLeftShort": "{{count}} күн",
+      "rewardHoursShort": "+{{count}}сағ",
+      "stats": {
+        "completed": "Орындалды",
+        "rewards": "Марапаттар",
+        "toClaim": "Алуға"
+      },
+      "claim": "Алу",
+      "claimed": "Алынды"
+    }
   },
   "premium": {
     "upgrade": "Pro-ға жаңарту",
@@ -740,6 +1010,18 @@
   },
   "teams": {
     "title": "Командалар",
+    "myTeams": "Менің командаларым",
+    "noTeams": "Сіз ешбір командада жоқсыз",
+    "createTeam": "Команда құру",
+    "teamNamePlaceholder": "Команда атауы",
+    "teamSlugPlaceholder": "Команда URL (slug)",
+    "teamDescriptionPlaceholder": "Команда сипаттамасы",
+    "createTeamButton": "Команда құру",
+    "leave": "Шығу",
+    "notFoundTitle": "Команда табылмады",
+    "notFoundDesc": "Бұл команда жоқ немесе жабық.",
+    "membersTitle": "Команда мүшелері",
+    "noMembers": "Командада әлі қатысушылар жоқ",
     "settings": "Команда баптаулары",
     "name": "Атауы",
     "description": "Сипаттама",
@@ -801,7 +1083,23 @@
     "likeRemoved": "Лайк алынды",
     "pageLiked": "Бет ұнады!",
     "pageNotPublished": "Бет жарияланбаған",
-    "giftPremium": "Premium сыйлау"
+    "giftPremium": "Premium сыйлау",
+    "requestSent": "Досқа сұрау жіберілді",
+    "requestAccepted": "Сұрау қабылданды!",
+    "requestRejected": "Сұрау қабылданбады",
+    "friendRemoved": "Дос жойылды",
+    "addLike": "Лайк қою",
+    "removeLike": "Лайкты алу",
+    "viewPage": "Бетті ашу",
+    "errors": {
+      "cannotAddSelf": "Өзіңізді дос қоса алмайсыз",
+      "friendshipExists": "Сіз достарсыз немесе сұрау жіберілген",
+      "notAuthenticated": "Кіру қажет",
+      "sendRequest": "Сұрау жіберу қатесі",
+      "acceptRequest": "Сұрауды қабылдау қатесі",
+      "rejectRequest": "Сұрауды қабылдамау қатесі",
+      "removeFriend": "Досты жою қатесі"
+    }
   },
   "gift": {
     "title": "Premium сыйлау",
@@ -988,14 +1286,59 @@
     "save": "Сақтау",
     "noBlocks": "Блоктар жоқ",
     "initiator": "Бастаушы",
-    "partner": "Серіктес"
+    "partner": "Серіктес",
+    "userSearchPlaceholder": "Аты бойынша іздеу...",
+    "myShoutouts": "Менің ұсыныстарым",
+    "noShoutouts": "Әлі ешкімді ұсынған жоқсыз",
+    "addShoutout": "Шаут-аут қосу",
+    "shoutoutRecommendTitle": "{{name}} пайдаланушысын ұсыну",
+    "shoutoutReasonPlaceholder": "Неге бұл адамды ұсынатыныңызды жазыңыз...",
+    "title": "Коллаборация",
+    "notFoundTitle": "Коллаборация табылмады",
+    "notFoundDesc": "Бұл бет жоқ немесе коллаборация әлі қабылданбаған.",
+    "pageNoBlocks": "Блоктар әлі қосылмаған"
+  },
+  "collaboration": {
+    "tabs": {
+      "collabs": "Коллабтар",
+      "promo": "Өзара пиар",
+      "shoutouts": "Шаут-ауттар",
+      "teams": "Командалар"
+    },
+    "incomingRequests": "Кіріс сұраныстар",
+    "activeCollabs": "Белсенді коллабтар",
+    "noActiveCollabs": "Белсенді коллабтар жоқ",
+    "manageBlocks": "Блоктарды басқару",
+    "sharedPage": "Ортақ бет",
+    "findPartner": "Серіктес табу",
+    "promoTitle": "Ниша бойынша өзара пиар",
+    "nicheUsers": "\"{{niche}}\" нишасындағы пайдаланушылар",
+    "offer": "Ұсыну",
+    "noMembers": "Қатысушылар жоқ",
+    "members": "Қатысушылар",
+    "user": "Пайдаланушы",
+    "owner": "Иесі"
+  },
+  "shoutout": {
+    "selectedUser": "Таңдалған пайдаланушы",
+    "selectUser": "Ұсынатын пайдаланушыны таңдаңыз",
+    "searchPlaceholder": "Аты немесе @username бойынша іздеу...",
+    "searchMinChars": "Кемінде 2 таңба енгізіңіз",
+    "searchError": "Іздеу қатесі. Кейінірек қайталап көріңіз.",
+    "noResults": "Пайдаланушылар табылмады. Басқа сұрау жасап көріңіз.",
+    "reasonLabel": "Неге ұсынып тұрсыз?",
+    "reasonPlaceholder": "Керемет маман, ұсынамын!",
+    "blockDescription": "Аудиторияңызға басқа пайдаланушыларды ұсыныңыз"
   },
   "dashboard": {
     "loadError": "Жүктеу қатесі",
     "loadErrorDesc": "Бет деректерін жүктеу сәтсіз аяқталды",
     "tryAgain": "Қайталап көру",
     "settings": "Баптаулар",
-    "collabs": "Коллабтар"
+    "collabs": "Коллабтар",
+    "aiBlocksCreated": "✨ AI арқылы {{count}} блок жасалды",
+    "blocksAdded": "{{count}} блок қосылды",
+    "onboardingComplete": "Қош келдіңіз! Бетіңізді жасай бастаңыз."
   },
   "blockEditor": {
     "advancedSettings": "Қосымша баптаулар",
