--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -20,6 +20,7 @@
     "error": "Ошибка",
     "success": "Успешно",
     "back": "Назад",
+    "backHome": "На главную",
     "next": "Далее",
     "confirm": "Подтвердить",
     "apply": "Применить",
@@ -46,7 +47,10 @@
     "yes": "Да",
     "no": "Нет",
     "or": "или",
-    "and": "и"
+    "and": "и",
+    "user": "Пользователь",
+    "friend": "Друг",
+    "recipient": "Получатель"
   },
   "form": {
     "fillRequired": "Заполните обязательные поля",
@@ -106,7 +110,9 @@
     "previewDesc": "Картинка которая показывается в галерее",
     "removePreview": "Убрать своё превью",
     "notifications": "Уведомления",
+    "emailLabel": "Email",
     "emailDesc": "Новые заявки на email",
+    "telegramLabel": "Telegram",
     "telegramDesc": "Мгновенные уведомления",
     "telegramChatId": "Ваш Chat ID",
     "telegramHelp": "Получите ID у",
@@ -289,6 +295,10 @@
       "freeAction": "Начать бесплатно",
       "viewPlans": "Выбрать Pro",
       "otherPlans": "Другие варианты:",
+      "annualPriceKzt": "31 320 ₸ за 12 месяцев",
+      "annualPriceUsd": "$60/year",
+      "otherPlansSix": "6 мес: 3 500 ₸/мес",
+      "otherPlansThree": "3 мес: 4 350 ₸/мес",
       "free": {
         "item1": "6 базовых блоков",
         "item2": "1 AI генерация/месяц",
@@ -421,7 +431,8 @@
     "community": "Сообщество",
     "beforeAfter": "До/После",
     "customCode": "Код",
-    "scratch": "Скретч"
+    "scratch": "Скретч",
+    "search": "Поиск"
   },
 "auth": {
     "signIn": "Войти",
@@ -493,6 +504,18 @@
   "pricing": {
     "title": "Тарифы",
     "subtitle": "Выберите подходящий план",
+    "month": "мес",
+    "tokens": {
+      "title": "Или платите Linkkon токенами",
+      "balanceDescription": "100 Linkkon = 1 день Premium. Ваш баланс: {{balance}} токенов",
+      "converting": "Конвертация...",
+      "buyDay": "Купить 1 день за {{cost}} Linkkon",
+      "buyTokens": "Купить токены"
+    },
+    "companyDetails": {
+      "nameLine": "ИП BEEGIN • БИН: 971207300019",
+      "addressLine": "г. Алматы, ул. Шолохова, д. 20/7"
+    },
     "free": {
       "title": "Free",
       "description": "Для начала",
@@ -524,7 +547,8 @@
     "popular": "Популярные",
     "viewPage": "Открыть",
     "like": "Нравится",
-    "views": "просмотров"
+    "views": "просмотров",
+    "untitled": "Без названия"
   },
   "errors": {
     "general": "Произошла ошибка",
@@ -545,7 +569,10 @@
     "shareLink": "Поделиться",
     "qrCode": "QR-код",
     "linkCopied": "Ссылка скопирована",
-    "scanQR": "Отсканируйте код для перехода"
+    "scanQR": "Отсканируйте код для перехода",
+    "defaultTitle": "Посмотрите мою страницу",
+    "qrDialogTitle": "QR-код",
+    "qrDialogDescription": "Отсканируйте этот код, чтобы поделиться страницей"
   },
   "toasts": {
     "sharing": {
@@ -566,10 +593,13 @@
     "overview": "Обзор",
     "users": "Пользователи",
     "pages": "Страницы",
+    "tokens": "Токены",
     "analytics": "Аналитика",
     "charts": "Графики",
     "detailed": "Детальная",
     "tiers": "Тарифы",
+    "verification": "Верификация",
+    "translations": "Переводы",
     "signOut": "Выйти",
     "noData": "Нет данных",
     "totalUsers": "Всего пользователей",
@@ -620,24 +650,270 @@
       "sat": "Сб"
     }
   },
+  "adminCharts": {
+    "userGrowth": "Рост пользователей",
+    "totalUsers": "Всего пользователей",
+    "newRegistrations": "Новые регистрации (14 дней)",
+    "users": "Пользователи",
+    "pages": "Страницы",
+    "blocks": "Блоки",
+    "eventsTitle": "События (14 дней)",
+    "userDistribution": "Распределение пользователей",
+    "eventTypes": "Типы событий",
+    "count": "Количество",
+    "socialActivity": "Социальная активность",
+    "socialActivity14Days": "Социальная активность за 14 дней",
+    "contentCreation14Days": "Создание контента за 14 дней",
+    "popularBlockTypes": "Популярные типы блоков",
+    "total": "Всего",
+    "accepted": "Принято",
+    "events": {
+      "views": "Просмотры",
+      "clicks": "Клики",
+      "shares": "Шейры"
+    },
+    "social": {
+      "friendships": "Дружбы",
+      "collaborations": "Коллаборации",
+      "teams": "Команды"
+    }
+  },
+  "adminTokens": {
+    "title": "Экономика токенов",
+    "stats": {
+      "inCirculation": "В обращении",
+      "inCirculationDesc": "Все токены пользователей",
+      "totalEarned": "Заработано всего",
+      "totalSpent": "Потрачено всего",
+      "platformFee": "Комиссия платформы",
+      "platformFeeDesc": "4% от продаж",
+      "premiumPurchases": "Покупки Premium",
+      "templatePurchases": "Покупки шаблонов",
+      "productPurchases": "Покупки товаров",
+      "activeUsers": "Активных пользователей",
+      "pendingWithdrawals": "Ожидающие выводы",
+      "paidOut": "Выплачено"
+    },
+    "tabs": {
+      "overview": "Обзор",
+      "transactions": "Транзакции",
+      "withdrawals": "Выводы"
+    },
+    "distributionTitle": "Распределение по типам транзакций",
+    "historyTitle": "История транзакций",
+    "withdrawalsTitle": "Заявки на вывод средств",
+    "noData": "Нет данных",
+    "noTransactions": "Нет транзакций",
+    "noWithdrawals": "Нет заявок на вывод",
+    "platformFeeLabel": "Комиссия",
+    "notProvided": "Не указан",
+    "filter": {
+      "allTypes": "Все типы",
+      "premium": "Premium",
+      "templates": "Шаблоны",
+      "products": "Товары",
+      "paidBlocks": "Платные блоки"
+    },
+    "status": {
+      "pending": "Ожидает",
+      "approved": "Одобрено",
+      "completed": "Выполнено",
+      "rejected": "Отклонено"
+    },
+    "actions": {
+      "approve": "Одобрить",
+      "reject": "Отклонить",
+      "markPaid": "Отметить выплаченным"
+    }
+  },
+  "achievements": {
+    "rewardDescription": "Награда за достижение: {{title}}"
+  },
   "templates": {
     "title": "Шаблоны",
     "save": "Сохранить как шаблон",
     "apply": "Применить шаблон",
     "myTemplates": "Мои шаблоны",
-    "marketplace": "Маркетплейс"
+    "marketplace": "Маркетплейс",
+    "category": "Категория",
+    "selectCategory": "Выберите категорию",
+    "categories": {
+      "all": "Все",
+      "creators": "Креаторы",
+      "business": "Бизнес",
+      "service": "Сервис",
+      "realEstate": "Недвижимость",
+      "wedding": "Свадьба",
+      "personal": "Личное",
+      "experts": "Эксперты",
+      "premium": "Премиум",
+      "other": "Другое"
+    }
+  },
+  "blockPreview": {
+    "title": "Превью блока",
+    "unavailable": "Превью недоступно",
+    "linkTitle": "Моя ссылка",
+    "buttonTitle": "Нажми меня",
+    "textContent": "Это текстовый блок",
+    "imageAlt": "Пример изображения",
+    "socialsTitle": "Мои соцсети",
+    "productName": "Товар",
+    "productDescription": "Описание товара",
+    "videoTitle": "Видео",
+    "carouselImage1": "Изображение 1",
+    "carouselImage2": "Изображение 2",
+    "customCodeHtml": "<div style=\"padding: 20px; text-align: center;\">Кастомный HTML</div>",
+    "formTitle": "Контактная форма",
+    "formButton": "Отправить",
+    "newsletterTitle": "Подпишитесь на рассылку",
+    "newsletterDescription": "Получайте новости первыми",
+    "newsletterButton": "Подписаться",
+    "testimonialName": "Иван Иванов",
+    "testimonialText": "Отличный сервис!",
+    "messengerTitle": "Свяжитесь со мной",
+    "downloadTitle": "Скачать файл",
+    "downloadDescription": "Описание файла",
+    "scratchTitle": "Стирай и выигрывай",
+    "scratchReveal": "Скидка 20%!"
+  },
+  "animationSettings": {
+    "title": "Анимация появления",
+    "type": "Тип анимации",
+    "none": "Без анимации",
+    "fadeIn": "Появление (Fade In)",
+    "slideUp": "Снизу вверх (Slide Up)",
+    "scaleIn": "Увеличение (Scale In)",
+    "bounce": "Отскок (Bounce)",
+    "speed": "Скорость анимации",
+    "speedSlow": "Медленно (0.8s)",
+    "speedNormal": "Нормально (0.5s)",
+    "speedFast": "Быстро (0.3s)",
+    "delay": "Задержка: {{value}}мс",
+    "delayHint": "Время до начала анимации (0-2000мс)"
   },
   "tokens": {
     "balance": "Баланс токенов",
     "earn": "Заработать",
     "spend": "Потратить",
-    "history": "История"
+    "history": "История",
+    "dailyVisit": "ежедневный вход",
+    "addBlock": "добавление блока",
+    "useAi": "использование AI",
+    "toastEarned": "+{{count}} Linkkon за {{action}}!",
+    "insufficientForPremium": "Недостаточно Linkkon. Нужно {{count}} токенов.",
+    "premiumGranted": "🎉 Вы получили 1 день Premium!",
+    "insufficientTokens": "Недостаточно токенов",
+    "convertError": "Ошибка при конвертации",
+    "insufficientForPurchase": "Недостаточно Linkkon. Нужно {{count}} токенов.",
+    "purchaseSuccess": "✨ Покупка успешна!",
+    "purchaseError": "Ошибка при покупке",
+    "withdrawalCreated": "Заявка на вывод создана!",
+    "withdrawalPremiumRequired": "Вывод доступен только для Premium пользователей",
+    "withdrawalError": "Ошибка при создании заявки"
+  },
+  "quests": {
+    "dailyVisit": {
+      "title": "Ежедневный визит",
+      "description": "Зайди в приложение"
+    },
+    "addBlock": {
+      "title": "Добавь блок",
+      "description": "Добавь новый блок на страницу"
+    },
+    "editProfile": {
+      "title": "Обнови профиль",
+      "description": "Измени имя или био профиля"
+    },
+    "sharePage": {
+      "title": "Поделись страницей",
+      "description": "Скопируй ссылку на свою страницу"
+    },
+    "useAi": {
+      "title": "Используй AI",
+      "description": "Сгенерируй контент с помощью AI"
+    },
+    "toastDailyVisit": "👋 +{{count}} Linkkon за ежедневный визит!",
+    "toastCompleted": "{{icon}} +{{count}} Linkkon за \"{{title}}\"!",
+    "panelTitle": "Ежедневные задания",
+    "allCompleted": "🎉 Все задания выполнены!",
+    "tokensEarned": "+{{count}} Linkkon заработано"
   },
   "referral": {
     "title": "Реферальная программа",
     "yourCode": "Ваш код",
     "invited": "Приглашено",
-    "earned": "Заработано"
+    "earned": "Заработано",
+    "toastSuccess": "🎉 +{{count}} дней Premium для вас и друга!",
+    "codeCopied": "Код скопирован!",
+    "linkCopied": "Ссылка скопирована!",
+    "errors": {
+      "invalidCode": "Неверный код приглашения",
+      "alreadyReferred": "Вы уже использовали реферальный код",
+      "selfReferral": "Нельзя использовать свой код",
+      "applyFailed": "Ошибка при применении кода"
+    }
+  },
+  "social": {
+    "weeklyChallenge": "Еженедельный челлендж",
+    "challenge": "Челлендж",
+    "activity": {
+      "pagePublished": "опубликовал(а) страницу",
+      "newBlock": "добавил(а) новый блок",
+      "achievement": "получил(а) достижение",
+      "streakMilestone": "достиг(ла) milestone стрика",
+      "challengeCompleted": "выполнил(а) челлендж",
+      "giftSent": "отправил(а) подарок",
+      "giftReceived": "получил(а) подарок",
+      "pageBoosted": "продвигает страницу",
+      "newFriend": "добавил(а) друга",
+      "pageLiked": "понравилась страница"
+    },
+    "feed": {
+      "emptyTitle": "Пока нет активности",
+      "emptyDescription": "Добавьте друзей, чтобы видеть их активность",
+      "title": "Лента друзей",
+      "events_one": "{{count}} событие",
+      "events_few": "{{count}} события",
+      "events_many": "{{count}} событий",
+      "events_other": "{{count}} событий"
+    },
+    "metadata": {
+      "achievement": "🏆 {{title}}",
+      "achievementFallback": "Новое достижение",
+      "streak": "🔥 {{count}} дней подряд",
+      "challenge": "✅ {{title}}",
+      "challengeFallback": "Челлендж выполнен",
+      "gift": "💝 +{{count}} дней Premium",
+      "boost": "🚀 {{type}} буст",
+      "boostFallback": "standard"
+    },
+    "pendingGifts": {
+      "title": "Подарки для вас!",
+      "count_one": "{{count}} подарок",
+      "count_few": "{{count}} подарка",
+      "count_many": "{{count}} подарков",
+      "count_other": "{{count}} подарков",
+      "days_one": "+{{count}} день",
+      "days_few": "+{{count}} дня",
+      "days_many": "+{{count}} дней",
+      "days_other": "+{{count}} дней",
+      "activate": "Активировать"
+    },
+    "weeklyChallenges": {
+      "title": "Недельные челленджи",
+      "completed": "{{completed}}/{{total}} выполнено",
+      "refreshesOnMonday": "Обновляются каждый понедельник",
+      "daysLeftShort": "{{count}} дн.",
+      "rewardHoursShort": "+{{count}}ч",
+      "stats": {
+        "completed": "Выполнено",
+        "rewards": "Награды",
+        "toClaim": "К получению"
+      },
+      "claim": "Забрать",
+      "claimed": "Получено"
+    }
   },
   "premium": {
     "upgrade": "Улучшить до Pro",
@@ -740,6 +1016,18 @@
   },
   "teams": {
     "title": "Команды",
+    "myTeams": "Мои команды",
+    "noTeams": "Вы не состоите ни в одной команде",
+    "createTeam": "Создать команду",
+    "teamNamePlaceholder": "Название команды",
+    "teamSlugPlaceholder": "URL команды (slug)",
+    "teamDescriptionPlaceholder": "Описание команды",
+    "createTeamButton": "Создать команду",
+    "leave": "Выйти",
+    "notFoundTitle": "Команда не найдена",
+    "notFoundDesc": "Эта команда не существует или является приватной.",
+    "membersTitle": "Участники команды",
+    "noMembers": "В команде пока нет участников",
     "settings": "Настройки команды",
     "name": "Название",
     "description": "Описание",
@@ -802,6 +1090,23 @@
     "pageLiked": "Страница понравилась!",
     "pageNotPublished": "Страница не опубликована",
     "giftPremium": "Подарить Premium"
+    ,
+    "requestSent": "Запрос в друзья отправлен",
+    "requestAccepted": "Запрос принят!",
+    "requestRejected": "Запрос отклонён",
+    "friendRemoved": "Друг удалён",
+    "addLike": "Поставить лайк",
+    "removeLike": "Убрать лайк",
+    "viewPage": "Открыть страницу",
+    "errors": {
+      "cannotAddSelf": "Нельзя добавить себя в друзья",
+      "friendshipExists": "Вы уже друзья или запрос отправлен",
+      "notAuthenticated": "Необходимо войти в аккаунт",
+      "sendRequest": "Ошибка отправки запроса",
+      "acceptRequest": "Ошибка принятия запроса",
+      "rejectRequest": "Ошибка отклонения запроса",
+      "removeFriend": "Ошибка удаления"
+    }
   },
   "gift": {
     "title": "Подарить Premium",
@@ -988,14 +1293,59 @@
     "save": "Сохранить",
     "noBlocks": "Нет блоков",
     "initiator": "Инициатор",
-    "partner": "Партнёр"
+    "partner": "Партнёр",
+    "userSearchPlaceholder": "Поиск по имени...",
+    "myShoutouts": "Мои рекомендации",
+    "noShoutouts": "Вы ещё никого не рекомендовали",
+    "addShoutout": "Добавить шаут-аут",
+    "shoutoutRecommendTitle": "Рекомендовать {{name}}",
+    "shoutoutReasonPlaceholder": "Напишите почему рекомендуете этого человека...",
+    "title": "Коллаборация",
+    "notFoundTitle": "Коллаборация не найдена",
+    "notFoundDesc": "Эта страница не существует или коллаборация ещё не принята.",
+    "pageNoBlocks": "Блоки ещё не добавлены"
+  },
+  "collaboration": {
+    "tabs": {
+      "collabs": "Коллабы",
+      "promo": "Взаимный пиар",
+      "shoutouts": "Шаут-ауты",
+      "teams": "Команды"
+    },
+    "incomingRequests": "Входящие запросы",
+    "activeCollabs": "Активные коллаборации",
+    "noActiveCollabs": "Нет активных коллабораций",
+    "manageBlocks": "Управление блоками",
+    "sharedPage": "Совместная страница",
+    "findPartner": "Найти партнёра",
+    "promoTitle": "Взаимный пиар по нише",
+    "nicheUsers": "Пользователи в нише \"{{niche}}\"",
+    "offer": "Предложить",
+    "noMembers": "Нет участников",
+    "members": "Участники",
+    "user": "Пользователь",
+    "owner": "Владелец"
+  },
+  "shoutout": {
+    "selectedUser": "Выбранный пользователь",
+    "selectUser": "Выберите пользователя для рекомендации",
+    "searchPlaceholder": "Поиск по имени или @username...",
+    "searchMinChars": "Введите минимум 2 символа",
+    "searchError": "Ошибка поиска. Попробуйте позже.",
+    "noResults": "Пользователи не найдены. Попробуйте другой запрос.",
+    "reasonLabel": "Почему рекомендуете?",
+    "reasonPlaceholder": "Отличный специалист, рекомендую!",
+    "blockDescription": "Рекомендуйте других пользователей вашей аудитории"
   },
   "dashboard": {
     "loadError": "Ошибка загрузки",
     "loadErrorDesc": "Не удалось загрузить данные страницы",
     "tryAgain": "Попробовать снова",
     "settings": "Настройки",
-    "collabs": "Коллабы"
+    "collabs": "Коллабы",
+    "aiBlocksCreated": "✨ Создано {{count}} блоков с помощью AI",
+    "blocksAdded": "Добавлено {{count}} блоков",
+    "onboardingComplete": "Добро пожаловать! Начните создавать свою страницу."
   },
   "blockEditor": {
     "advancedSettings": "Дополнительные настройки",
